# ci-mobility-prototype

./: .gitignore  Partie 8.txt  README.md  pyproject.toml  requirements.txt
config/: data_params.yml
data/synthetic/: metadata_20260113_134925.yml  metadata_20260113_135242.yml  metadata_20260113_135447.yml  metadata_20260113_150357.yml  metadata_20260113_150838.yml  migration_20260113_134925.csv  migration_20260113_134925.parquet  migration_20260113_135242.csv  migration_20260113_135242.parquet  migration_20260113_135447.csv  migration_20260113_135447.parquet  migration_20260113_150357.csv  migration_20260113_150357.parquet  migration_20260113_150838.csv  migration_20260113_150838.parquet  mobility_20260113_134925.csv  mobility_20260113_134925.parquet  mobility_20260113_135242.csv  mobility_20260113_135242.parquet  mobility_20260113_135447.csv  mobility_20260113_135447.parquet  mobility_20260113_150357.csv  mobility_20260113_150357.parquet  mobility_20260113_150838.csv  mobility_20260113_150838.parquet  poverty_20260113_134925.parquet  poverty_20260113_135242.parquet  poverty_20260113_135447.parquet  poverty_20260113_150357.parquet  poverty_20260113_150838.parquet  users_20260113_134925.csv  users_20260113_134925.parquet  users_20260113_135242.csv  users_20260113_135242.parquet  users_20260113_135447.csv  users_20260113_135447.parquet  users_20260113_150357.csv  users_20260113_150357.parquet  users_20260113_150838.csv  users_20260113_150838.parquet
docs/: 01_introduction.md  02_zone_etude.md  03_description_donnees.md  04_methodologie.md  05_analyse_descriptive.md  06_resultats.md  07_interpretation.md  08_conclusion.md  README.md  documentation.ini
docs/annexes/: A_glossaire.md
notebooks/data/processed/: liste_exports_20260113_162332.csv  liste_exports_20260113_162443.csv
notebooks/data/processed/stats/: resume_general_20260113_162332.csv
src/dashboard/: app.py  temporal_mobility.py
src/dashboard_django/: README.md  db.sqlite3  manage.py  requirements_django.txt  settings.py  urls.py  wsgi.py
src/dashboard_django/api/: apps.py  urls.py  views.py
src/dashboard_django/dashboard_app/: __init__.py  apps.py  urls.py  views.py
src/dashboard_django/services/: __init__.py  data_service.py
src/data_generation/: synthetic_generator.py
src/indicators/: migration_flows.py  mobility_metrics.py  poverty_index.py
src/pipeline/: run_pipeline.py
tests/: test_generators.py
(+9 files in other folders)
